# LLMTest

./: .gitignore  README.md  build.gradle.kts  gradle.properties  gradlew.bat  settings.gradle.kts
.build/llama.android/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json  llama-config.cmake  llama-version.cmake  llama.pc
.build/llama.android/common/: build-info.cpp  cmake_install.cmake
.build/llama.android/ggml/: cmake_install.cmake  ggml-config.cmake
.build/llama.android/ggml/src/: cmake_install.cmake
.build/llama.android/ggml/src/ggml-cpu/: cmake_install.cmake
.build/llama.android/src/: cmake_install.cmake
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/assets/: agent.css
app/src/main/cpp/: CMakeLists.txt  qwen_bridge.cpp
app/src/main/java/com/samsung/llmtest/: MainActivity.kt  QwenBridge.kt  QwenPromptFormatter.kt
app/src/main/res/drawable/: ic_file_open.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
